--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,19 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/contentMainFather"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    android:layout_height="match_parent">
 
-    <fragment
-        android:id="@+id/nav_host_fragment_content_main"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:defaultNavHost="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/nav_graph" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        app:layout_constraintTop_toTopOf="@+id/contentMainFather"
+        app:cardBackgroundColor="@color/teal_700">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/title_ParkingApp"
+            android:gravity="center_vertical"
+            android:paddingLeft="10dp"
+            android:textSize="30dp"
+            android:textColor="@color/black"
+            android:textStyle="italic"
+            ></TextView>
+
+    </androidx.cardview.widget.CardView>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:indeterminate="true"
+        android:indeterminateDrawable="@drawable/progress_bar_drawable"
+
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        style="?android:attr/progressBarStyleHorizontal"
+        tools:layout_editor_absoluteX="130dp"
+        tools:layout_editor_absoluteY="200dp"
+        android:padding="10dp"
+        android:progress="0"
+        />
+
+    <TextView
+        android:id="@+id/numberBusyPlaces"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/progressBar"
+        app:layout_constraintStart_toStartOf="@id/progressBar"
+        android:paddingStart="30dp"
+        android:text="0"
+        android:textStyle="bold"
+        >
+    </TextView>
+    <TextView
+        android:id="@+id/busyPlaces"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/progressBar"
+        app:layout_constraintStart_toEndOf="@+id/numberBusyPlaces"
+        android:paddingStart="5dp"
+        android:text="@string/busyPlaces"
+        android:textStyle="bold"
+        >
+    </TextView>
+
+    <TextView
+        android:id="@+id/numberFreePlaces"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/progressBar"
+        app:layout_constraintEnd_toStartOf="@+id/freePlaces"
+        android:paddingEnd="5dp"
+        android:text="30"
+        android:textStyle="bold"
+        >
+    </TextView>
+    <TextView
+        android:id="@+id/freePlaces"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/progressBar"
+        app:layout_constraintEnd_toEndOf="@id/progressBar"
+        android:paddingEnd="30dp"
+        android:text="@string/freePlaces"
+        android:textStyle="bold"
+        >
+    </TextView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/busyPlaces"
+        android:textStyle="bold"
+        >
+
+    </androidx.recyclerview.widget.RecyclerView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
