--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,12 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/mainActivity">
+    app:startDestination="@id/parkingLotsFragment">
 
-    <activity
-        android:id="@+id/mainActivity"
-        android:name="com.example.my_first_app.view.MainActivity"
-        android:label="fragment_parking_lots"
-        tools:layout="@layout/fragment_parking_lots" />
+    <fragment
+        android:id="@+id/parkingLotsFragment"
+        android:name="com.example.my_first_app.view.LotsFragment"
+        android:label="ParkingLotsFragment"
+        tools:layout="@layout/layout_ParkingLots"
+        >
+
+        <action
+            android:id="@+id/action_parkingLotsFragment_to_reservationsFragment"
+            app:destination="@id/reservationsFragment" />
+
+    </fragment>
+    <fragment
+        android:id="@+id/reservationsFragment"
+        android:name="com.example.my_first_app.view.ReservationsFragment"
+        android:label="ReservationsFragment"
+        tools:layout="@layout/layout_reservations"
+        />
+
 
 </navigation>
