--- a/app/src/main/res/layout/layout_reservations.xml
+++ b/app/src/main/res/layout/layout_reservations.xml
@@ -3,21 +3,78 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/reservation_layout"
+    tools:context=".view.MainActivity">
 
-    <androidx.appcompat.widget.ActionMenuView
+
+    <Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/blue"
-    >
-    </androidx.appcompat.widget.ActionMenuView>
+        android:background="@color/blue">
 
-    <TextView
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/toolbar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+
+            <ImageButton
+
+                android:id="@+id/imageButton"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@color/blue"
+                android:clickable="true"
+                app:layout_constraintBottom_toBottomOf="@+id/toolbar_layout"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/toolbar_layout"
+                app:srcCompat="?attr/actionModeCloseDrawable" />
+
+            <TextView
+                android:id="@+id/lot"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/alegreya_sans_sc_extrabold_italic"
+                android:gravity="center_vertical"
+                android:paddingStart="15dp"
+                android:text="@string/lot"
+                android:textColor="@color/white"
+                android:textSize="40dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/toolbar_layout"
+                app:layout_constraintStart_toEndOf="@+id/imageButton"
+                app:layout_constraintTop_toTopOf="@+id/toolbar_layout" />
+
+            <TextView
+                android:id="@+id/lot_number"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/alegreya_sans_sc_extrabold_italic"
+                android:gravity="center_vertical"
+                android:paddingStart="5dp"
+                android:text="1"
+                android:textColor="@color/white"
+                android:textSize="40dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/toolbar_layout"
+                app:layout_constraintStart_toEndOf="@+id/lot"
+                app:layout_constraintTop_toTopOf="@+id/toolbar_layout" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </Toolbar>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_reservations"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hola soy la pantalla 2"
-        android:gravity="center"
-    />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
