datePicker almost implemented
Date picker is almost implemented, it doesn´t come back to the previous screen after picking a date

--- a/app/src/main/res/layout/layout_add_reservation.xml
+++ b/app/src/main/res/layout/layout_add_reservation.xml
@@ -40,7 +40,7 @@
                 android:fontFamily="@font/alegreya_sans_sc_extrabold_italic"
                 android:gravity="center_vertical"
                 android:paddingStart="15dp"
-                android:text="@string/lot"
+                android:text="@string/addReservation"
                 android:textColor="@color/white"
                 android:textSize="25dp"
                 android:textStyle="bold"
@@ -48,33 +48,30 @@
                 app:layout_constraintStart_toEndOf="@+id/imageButton"
                 app:layout_constraintTop_toTopOf="@+id/toolbar_layout" />
 
-            <TextView
-                android:id="@+id/lot_number"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/alegreya_sans_sc_extrabold_italic"
-                android:gravity="center_vertical"
-                android:paddingStart="5dp"
-                android:text="1"
-                android:textColor="@color/white"
-                android:textSize="25dp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/toolbar_layout"
-                app:layout_constraintStart_toEndOf="@+id/lot"
-                app:layout_constraintTop_toTopOf="@+id/toolbar_layout" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </Toolbar>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_reservations"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/tvDate"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:text="Hello World this is the actual date"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.429"
+        android:gravity="center"
+        />
+
+    <Button
+        android:id="@+id/date_picker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="timePicker"
+
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
