--- a/app/src/main/res/layout/main_recycle_view_item_with_content.xml
+++ b/app/src/main/res/layout/main_recycle_view_item_with_content.xml
@@ -9,7 +9,7 @@
     android:layout_marginVertical="5dp"
     android:background="@drawable/recycler_view_constraintlayout"
     android:clipToPadding="false"
-    >
+>
 
     <View
         android:id="@+id/ellipse_1"
@@ -21,7 +21,8 @@
         android:background="@drawable/elipse_1"
         app:layout_constraintBottom_toBottomOf="@id/fatherLayout"
         app:layout_constraintStart_toStartOf="@+id/fatherLayout"
-        app:layout_constraintTop_toTopOf="@id/fatherLayout" />
+        app:layout_constraintTop_toTopOf="@id/fatherLayout"
+    />
 
     <TextView
         android:id="@+id/spot_number"
@@ -34,7 +35,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/ellipse_1"
         app:layout_constraintEnd_toEndOf="@id/ellipse_1"
         app:layout_constraintStart_toStartOf="@+id/ellipse_1"
-        app:layout_constraintTop_toTopOf="@+id/ellipse_1" />
+        app:layout_constraintTop_toTopOf="@+id/ellipse_1"
+    />
 
     <TextView
         android:id="@+id/day"
@@ -46,7 +48,8 @@
         android:textSize="14dp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/ellipse_1"
-        app:layout_constraintTop_toTopOf="@id/ellipse_1" />
+        app:layout_constraintTop_toTopOf="@id/ellipse_1"
+    />
 
     <TextView
         android:id="@+id/month_and_year"
@@ -57,7 +60,8 @@
         android:textSize="14dp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/day"
-        app:layout_constraintTop_toTopOf="@id/ellipse_1" />
+        app:layout_constraintTop_toTopOf="@id/ellipse_1"
+    />
 
     <TextView
         android:id="@+id/hour_of_day"
@@ -68,6 +72,7 @@
         android:text="@string/hour_of_day"
         android:textSize="14dp"
         app:layout_constraintBottom_toBottomOf="@id/ellipse_1"
-        app:layout_constraintStart_toEndOf="@id/ellipse_1" />
+        app:layout_constraintStart_toEndOf="@id/ellipse_1"
+    />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
