--- a/app/src/main/res/layout/layout_parking_lots.xml
+++ b/app/src/main/res/layout/layout_parking_lots.xml
@@ -5,14 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/parkingLotLayout"
-    tools:context=".view.MainActivity">
+    tools:context=".view.MainActivity"
+>
 
     <Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/blue">
+        android:background="@color/blue"
+    >
 
         <TextView
             android:layout_width="match_parent"
@@ -23,8 +25,8 @@
             android:text="@string/title_ParkingApp"
             android:textColor="@color/white"
             android:textSize="40dp"
-            android:textStyle="bold" />
-
+            android:textStyle="bold"
+        />
     </Toolbar>
 
     <ProgressBar
@@ -39,7 +41,7 @@
         tools:layout_editor_absoluteY="200dp"
         android:padding="10dp"
         android:progress="38"
-        />
+    />
 
     <TextView
         android:id="@+id/numberBusyPlaces"
@@ -50,8 +52,8 @@
         android:paddingStart="30dp"
         android:text="0"
         android:textStyle="bold"
-        >
-    </TextView>
+    />
+
     <TextView
         android:id="@+id/busyPlaces"
         android:layout_width="wrap_content"
@@ -62,8 +64,7 @@
         android:paddingBottom="10dp"
         android:text="@string/busyPlaces"
         android:textStyle="bold"
-        >
-    </TextView>
+    />
 
     <TextView
         android:id="@+id/numberFreePlaces"
@@ -74,8 +75,7 @@
         android:paddingEnd="5dp"
         android:text="30"
         android:textStyle="bold"
-        >
-    </TextView>
+    />
 
     <TextView
         android:id="@+id/freePlaces"
@@ -86,8 +86,7 @@
         android:paddingEnd="30dp"
         android:text="@string/freePlaces"
         android:textStyle="bold"
-        >
-    </TextView>
+    />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/main_recycler_view"
@@ -96,4 +95,20 @@
         app:layout_constraintTop_toBottomOf="@id/busyPlaces"
         android:textStyle="bold"
     />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingAddButton"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="40dp"
+        android:clickable="true"
+        app:fabCustomSize="80dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:maxImageSize="70dp"
+        android:backgroundTint="@color/blue"
+        app:srcCompat="@android:drawable/ic_menu_add"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
