--- a/app/src/main/res/layout/layout_reservations.xml
+++ b/app/src/main/res/layout/layout_reservations.xml
@@ -5,24 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/reservation_layout"
-    tools:context=".view.MainActivity">
-
+    tools:context=".view.MainActivity"
+>
 
     <Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/blue">
+        android:background="@color/blue"
+    >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            >
+        >
 
             <ImageButton
-
                 android:id="@+id/imageButton"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -31,7 +31,8 @@
                 app:layout_constraintBottom_toBottomOf="@+id/toolbar_layout"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/toolbar_layout"
-                app:srcCompat="?attr/actionModeCloseDrawable" />
+                app:srcCompat="?attr/actionModeCloseDrawable"
+            />
 
             <TextView
                 android:id="@+id/lot"
@@ -46,7 +47,8 @@
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/toolbar_layout"
                 app:layout_constraintStart_toEndOf="@+id/imageButton"
-                app:layout_constraintTop_toTopOf="@+id/toolbar_layout" />
+                app:layout_constraintTop_toTopOf="@+id/toolbar_layout"
+            />
 
             <TextView
                 android:id="@+id/lot_number"
@@ -61,8 +63,8 @@
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/toolbar_layout"
                 app:layout_constraintStart_toEndOf="@+id/lot"
-                app:layout_constraintTop_toTopOf="@+id/toolbar_layout" />
-
+                app:layout_constraintTop_toTopOf="@+id/toolbar_layout"
+            />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </Toolbar>
@@ -74,7 +76,23 @@
         android:layout_marginTop="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+    />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingAddButton"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="40dp"
+        android:clickable="true"
+        app:fabCustomSize="80dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:maxImageSize="70dp"
+        android:backgroundTint="@color/blue"
+        app:srcCompat="@android:drawable/ic_menu_add"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
