--- a/app/src/main/res/layout/layout_dialog_fragment_test.xml
+++ b/app/src/main/res/layout/layout_dialog_fragment_test.xml
@@ -37,7 +37,7 @@
     />
 
     <TextView
-        android:id="@+id/day"
+        android:id="@+id/testText"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         app:layout_constraintTop_toTopOf="@id/ellipse_1"
