--- a/app/src/main/res/layout/layout_add_reservation.xml
+++ b/app/src/main/res/layout/layout_add_reservation.xml
@@ -80,7 +80,10 @@
         app:layout_constraintEnd_toEndOf="parent"
 
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lotListText" />
+        app:layout_constraintTop_toBottomOf="@+id/lotListText"
+
+        tools:listitem="@layout/layout_drop_down_item"
+        />
 
     <!--<EditText
         android:id="@+id/lotListButton"
