--- a/app/src/main/res/layout/layout_dialog_fragment_test.xml
+++ b/app/src/main/res/layout/layout_dialog_fragment_test.xml
@@ -1,52 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fatherLayout"
-    android:layout_width="match_parent"
-    android:layout_height="60dp"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#4962EA"
-    android:paddingHorizontal="10dp"
-    android:paddingVertical="5dp"
+
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_delete_dialog"
+    android:layout_width="350dp"
+    android:layout_height="wrap_content"
+
+    app:cardCornerRadius="5dp"
+    app:cardBackgroundColor="@color/white"
+    app:cardElevation="15dp"
+    android:layout_marginHorizontal="17.5dp"
     >
 
-    <View
-        android:id="@+id/ellipse_1"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="5dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="@drawable/elipse_1"
-        app:layout_constraintStart_toStartOf="@+id/fatherLayout"
-        app:layout_constraintBottom_toBottomOf="@id/fatherLayout"
-        app:layout_constraintTop_toTopOf="@id/fatherLayout"
-    />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/card_lot_item"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
 
-    <TextView
-        android:id="@+id/elipse_number"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        app:layout_constraintStart_toStartOf="@+id/ellipse_1"
-        app:layout_constraintBottom_toBottomOf="@+id/ellipse_1"
-        app:layout_constraintTop_toTopOf="@+id/ellipse_1"
-        app:layout_constraintEnd_toEndOf="@id/ellipse_1"
-        android:text="1"
-        android:textSize="24dp"
-        android:textColor="@color/white"
-        android:gravity="center"
-    />
+        <TextView
+            android:id="@+id/start_month_and_year"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-    <TextView
-        android:id="@+id/testText"
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        app:layout_constraintTop_toTopOf="@id/ellipse_1"
-        app:layout_constraintBottom_toBottomOf="@id/ellipse_1"
-        app:layout_constraintStart_toEndOf="@id/ellipse_1"
-        android:paddingHorizontal="10dp"
-        android:text="Free"
-        android:textSize="14dp"
-        android:gravity="center"
-    />
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="16dp"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+            android:paddingTop="10dp"
+            android:text="@string/deleteDialogTitle"
+
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            app:layout_constraintStart_toStartOf="@+id/card_lot_item"
+            app:layout_constraintTop_toTopOf="@+id/card_lot_item" />
+
+        <TextView
+            android:id="@+id/textDeleteDialog"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="16dp"
+
+            android:text="@string/deleteDialogText"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/start_month_and_year" />
+
+
+        <EditText
+            android:id="@+id/editText"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+
+            android:hint="@string/deleteDialogHint"
+            android:inputType="textPassword"
+            android:backgroundTint="@color/black"
+            android:textColorHint="@color/grey"
+            android:textColor="@color/black"
+
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="16dp"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textDeleteDialog" />
+
+        <Button
+            android:id="@+id/cancelButton"
+            android:layout_width="82dp"
+            android:layout_height="50dp"
+
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginBottom="1dp"
+            android:backgroundTint="@color/white"
+
+            android:gravity="center"
+            android:text="@string/deleteDialogOk"
+            android:textColor="@color/black"
+            android:textSize="12sp"
+
+            android:layout_marginTop="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editText" />
+
+        <Button
+            android:id="@+id/okButton"
+            android:layout_width="82dp"
+            android:layout_height="50dp"
+
+            android:layout_marginHorizontal="15dp"
+
+
+            android:backgroundTint="@color/white"
+            android:gravity="center"
+            android:text="@string/deleteDialogDeleteButton"
+            android:textColor="@color/black"
+
+            android:textSize="12sp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/cancelButton"
+            app:layout_constraintTop_toBottomOf="@+id/editText" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
