--- a/app/src/main/res/layout/layout_drop_down_item.xml
+++ b/app/src/main/res/layout/layout_drop_down_item.xml
@@ -2,9 +2,9 @@
     <TextView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/dropDownText"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="@string/pickALot"
         android:textAppearance="?attr/textAppearanceSubtitle1"
         android:padding="16dp"
     />
