refactor of ViewHolders

--- a/app/src/main/res/layout/layout_add_reservation.xml
+++ b/app/src/main/res/layout/layout_add_reservation.xml
@@ -75,10 +75,11 @@
         android:layout_height="50dp"
         android:layout_marginHorizontal="15dp"
 
-        android:spinnerMode="dialog"
+        android:spinnerMode="dropdown"
+        app:flow_maxElementsWrap="6"
         app:barrierMargin="@dimen/cardview_compat_inset_shadow"
-        app:layout_constraintEnd_toEndOf="parent"
 
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lotListText"
 
