--- a/app/src/main/res/layout/layout_parking_lots.xml
+++ b/app/src/main/res/layout/layout_parking_lots.xml
@@ -40,6 +40,7 @@
         tools:layout_editor_absoluteX="130dp"
         tools:layout_editor_absoluteY="200dp"
         android:padding="10dp"
+        android:max="30"
         android:progress="38"
     />
 
