--- a/app/src/main/res/layout/layout_delete_dialog.xml
+++ b/app/src/main/res/layout/layout_delete_dialog.xml
@@ -1,24 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout_delete_dialog"
+    android:id="@+id/reservation_layout"
     android:layout_width="350dp"
     android:layout_height="wrap_content"
 
-    app:cardCornerRadius="5dp"
-    app:cardBackgroundColor="@color/white"
-    app:cardElevation="15dp"
     android:layout_marginHorizontal="17.5dp"
-    >
+    android:layout_marginVertical="5dp"
+    app:cardBackgroundColor="@color/white"
+    app:cardCornerRadius="15dp"
+    app:cardElevation="15dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/card_lot_item"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/start_month_and_year"
@@ -32,9 +29,9 @@
             android:paddingTop="10dp"
             android:text="@string/deleteDialogTitle"
 
+            android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="@+id/card_lot_item"
             app:layout_constraintTop_toTopOf="@+id/card_lot_item" />
 
@@ -50,8 +47,8 @@
             android:textColor="@color/black"
             android:textSize="15sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/start_month_and_year" />
 
 
@@ -60,14 +57,14 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
 
-            android:hint="@string/deleteDialogHint"
-            android:inputType="textPassword"
-            android:backgroundTint="@color/black"
-            android:textColorHint="@color/grey"
-            android:textColor="@color/black"
-
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="16dp"
+            android:backgroundTint="@color/black"
+            android:hint="@string/deleteDialogHint"
+            android:inputType="textPassword"
+
+            android:textColor="@color/black"
+            android:textColorHint="@color/grey"
 
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -75,30 +72,12 @@
 
         <Button
             android:id="@+id/cancelButton"
-            android:layout_width="82dp"
+            android:layout_width="wrap_content"
             android:layout_height="50dp"
 
             android:layout_marginHorizontal="15dp"
-            android:layout_marginBottom="1dp"
-            android:backgroundTint="@color/white"
-
-            android:gravity="center"
-            android:text="@string/deleteDialogOk"
-            android:textColor="@color/black"
-            android:textSize="12sp"
-
             android:layout_marginTop="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText" />
-
-        <Button
-            android:id="@+id/okButton"
-            android:layout_width="82dp"
-            android:layout_height="50dp"
-
-            android:layout_marginHorizontal="15dp"
-
+            android:layout_marginBottom="1dp"
 
             android:backgroundTint="@color/white"
             android:gravity="center"
@@ -106,7 +85,24 @@
             android:textColor="@color/black"
 
             android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editText" />
+
+        <Button
+            android:id="@+id/okButton"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+
+            android:layout_marginHorizontal="15dp"
+
             android:layout_marginTop="16dp"
+            android:backgroundTint="@color/white"
+            android:gravity="center"
+            android:text="@string/deleteDialogCancel"
+
+            android:textColor="@color/black"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/cancelButton"
             app:layout_constraintTop_toBottomOf="@+id/editText" />
