--- a/app/src/main/res/layout/layout_delete_dialog.xml
+++ b/app/src/main/res/layout/layout_delete_dialog.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
     android:id="@+id/reservation_layout"
-    android:layout_width="350dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
 
-    android:layout_marginHorizontal="17.5dp"
-    android:layout_marginVertical="5dp"
-    app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="15dp"
-    app:cardElevation="15dp">
+    android:layout_marginHorizontal="10dp"
+    android:layout_marginVertical="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/card_lot_item"
@@ -37,7 +34,7 @@
 
         <TextView
             android:id="@+id/textDeleteDialog"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
             android:layout_marginHorizontal="20dp"
@@ -54,8 +51,8 @@
 
         <EditText
             android:id="@+id/editText"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
 
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="16dp"
@@ -108,4 +105,4 @@
             app:layout_constraintTop_toBottomOf="@+id/editText" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+</LinearLayout>
