--- a/app/src/main/res/layout/layout_parking_lots.xml
+++ b/app/src/main/res/layout/layout_parking_lots.xml
@@ -92,10 +92,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/main_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/busyPlaces"
+        android:layout_height="0dp"
         android:textStyle="bold"
-    />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/busyPlaces" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingAddButton"
