--- a/app/src/main/res/layout/layout_add_reservation.xml
+++ b/app/src/main/res/layout/layout_add_reservation.xml
@@ -57,60 +57,53 @@
 
     <!-- parking lot -->
 
-    <TextView
-        android:id="@+id/lotListText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Selected lot"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/toolbar"
-        app:layout_constraintVertical_bias="0.147" />
-
     <Spinner
         android:id="@+id/lotListButton"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginHorizontal="15dp"
-
-        android:paddingStart="16dp"
-        android:textSize="20sp"
-
-        android:contentDescription="@string/spinner_content"
-
-        android:spinnerMode="dropdown"
-        app:flow_maxElementsWrap="6"
-        app:barrierMargin="10dp"
-
+        android:layout_marginTop="48dp"
         android:background="@drawable/spinner_background"
-
+        android:contentDescription="@string/spinner_content"
+        android:spinnerMode="dropdown"
+        android:textSize="20sp"
+        app:barrierMargin="10dp"
+        app:flow_maxElementsWrap="6"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.689"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lotListText"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        tools:listitem="@layout/layout_drop_down_item" />
 
-        tools:listitem="@layout/layout_drop_down_item"
-        />
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/lotListButton"
+        app:layout_constraintEnd_toEndOf="@+id/lotListButton"
+        app:layout_constraintTop_toTopOf="@+id/lotListButton"
+        app:srcCompat="@android:drawable/arrow_down_float" />
 
     <!-- Start date and time -->
 
-    <TextView
-        android:id="@+id/startDateText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="116dp"
-        android:text="Selected time"
-        app:layout_constraintEnd_toEndOf="@+id/startDateButton"
-        app:layout_constraintTop_toBottomOf="@+id/lotListButton" />
+    <EditText
+        android:id="@+id/startDateButton"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="15dp"
+        android:layout_marginTop="28dp"
+        android:background="@drawable/spinner_background"
+        android:clickable="false"
 
-    <TextView
-        android:id="@+id/startTimeText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Selected time "
-        app:layout_constraintBottom_toBottomOf="@+id/startDateText"
-        app:layout_constraintEnd_toStartOf="@+id/startDateText"/>
+        android:focusable="false"
+        android:hapticFeedbackEnabled="false"
+        android:hint="@string/startDateTimeEditText"
+        android:paddingHorizontal="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.551"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lotListButton" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -123,40 +116,23 @@
         app:srcCompat="@drawable/ic_baseline_calendar_today_24"
         />
 
+    <!-- End date and time -->
+
     <EditText
-        android:id="@+id/startDateButton"
+        android:id="@+id/endDateTimeButton"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_margin="15dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/spinner_background"
         android:clickable="false"
-
         android:focusable="false"
-        android:hapticFeedbackEnabled="false"
-        android:hint="@string/startDateTimeEditText"
+        android:hint="@string/endDateTimeEditText"
+        android:paddingHorizontal="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.448"
+        app:layout_constraintHorizontal_bias="0.517"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/startDateText" />
-
-    <!-- End date and time -->
-
-    <TextView
-        android:id="@+id/endDateText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="116dp"
-        android:text=" Selected time "
-        app:layout_constraintEnd_toEndOf="@+id/startDateButton"
         app:layout_constraintTop_toBottomOf="@+id/startDateButton" />
-
-    <TextView
-        android:id="@+id/endTimeText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Selected time "
-        app:layout_constraintBottom_toBottomOf="@+id/endDateText"
-        app:layout_constraintEnd_toStartOf="@+id/startDateText" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -167,43 +143,24 @@
         app:layout_constraintEnd_toEndOf="@+id/endDateTimeButton"
         app:layout_constraintTop_toTopOf="@+id/endDateTimeButton"
         app:srcCompat="@drawable/ic_baseline_calendar_today_24"
-        />
-
-    <EditText
-        android:id="@+id/endDateTimeButton"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_margin="15dp"
-        android:clickable="false"
-        android:focusable="false"
-        android:hint="@string/endDateTimeEditText"
-        android:background="@drawable/spinner_background"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/endDateText" />
+    />
 
     <!-- Authorization Code -->
-    <TextView
-        android:id="@+id/authorizationCodeText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Selected Code"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/endDateTimeButton" />
 
     <EditText
         android:id="@+id/authorizationCodeButton"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_margin="15dp"
-        android:hint="@string/authorizationEditText"
+        android:layout_marginTop="28dp"
         android:background="@drawable/spinner_background"
+        android:hint="@string/authorizationEditText"
         android:inputType="textPassword"
+        android:paddingHorizontal="20dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.689"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/authorizationCodeText" />
+        app:layout_constraintTop_toBottomOf="@+id/endDateTimeButton" />
 
     <Button
         android:id="@+id/saveButton"
