--- a/app/src/main/res/layout/layout_parking_lots.xml
+++ b/app/src/main/res/layout/layout_parking_lots.xml
@@ -48,12 +48,12 @@
         android:id="@+id/numberBusyPlaces"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/progressBar"
-        app:layout_constraintStart_toStartOf="@id/progressBar"
         android:paddingStart="30dp"
         android:text="0"
+        android:textColor="@color/sweet_grey"
         android:textStyle="bold"
-    />
+        app:layout_constraintStart_toStartOf="@id/progressBar"
+        app:layout_constraintTop_toBottomOf="@id/progressBar" />
 
     <TextView
         android:id="@+id/busyPlaces"
@@ -65,6 +65,7 @@
         android:paddingBottom="10dp"
         android:text="@string/busyPlaces"
         android:textStyle="bold"
+        android:textColor="@color/sweet_grey"
     />
 
     <TextView
@@ -76,6 +77,7 @@
         android:paddingEnd="5dp"
         android:text="30"
         android:textStyle="bold"
+        android:textColor="@color/sweet_grey"
     />
 
     <TextView
@@ -87,6 +89,7 @@
         android:paddingEnd="30dp"
         android:text="@string/freePlaces"
         android:textStyle="bold"
+        android:textColor="@color/sweet_grey"
     />
 
     <androidx.recyclerview.widget.RecyclerView
