--- a/app/src/main/res/layout/layout_add_reservation.xml
+++ b/app/src/main/res/layout/layout_add_reservation.xml
@@ -12,7 +12,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:background="@color/blue"
+        android:background="@color/green"
         app:layout_constraintTop_toTopOf="parent"
     >
 
@@ -29,7 +29,7 @@
                 android:id="@+id/backButton"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:background="@color/blue"
+                android:background="@color/green"
                 android:clickable="true"
                 app:layout_constraintBottom_toBottomOf="@+id/toolbar_layout"
                 app:layout_constraintStart_toStartOf="parent"
@@ -156,7 +156,7 @@
         android:layout_marginTop="28dp"
         android:background="@drawable/spinner_background"
         android:hint="@string/authorizationEditText"
-        android:inputType="textPassword"
+        android:inputType="number"
         android:paddingHorizontal="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.689"
@@ -170,7 +170,7 @@
         android:layout_marginHorizontal="10dp"
         android:layout_marginBottom="5dp"
         android:text="@string/save"
-        android:backgroundTint="@color/blue"
+        android:backgroundTint="@color/green"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.789"
