--- a/app/src/main/res/drawable/elipse_1.xml
+++ b/app/src/main/res/drawable/elipse_1.xml
@@ -17,7 +17,7 @@
 
         <path
             android:pathData="M0 0V40H40V0"
-            android:fillColor="@color/sweet_grey"
+            android:fillColor="@color/green"
             />
 
     </group>
