--- a/app/src/main/res/drawable/recycler_view_constraintlayout.xml
+++ b/app/src/main/res/drawable/recycler_view_constraintlayout.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/blue"/>
+    <solid android:color="@color/grey"/>
 
-    <stroke android:width="3dp"
+    <!--<stroke android:width="3dp"
         android:color="@color/white"
-        />
+        />-->
 
     <padding android:left="1dp"
         android:top="1dp"
