--- a/app/src/main/res/layout/layout_delete_dialog.xml
+++ b/app/src/main/res/layout/layout_delete_dialog.xml
@@ -7,7 +7,8 @@
     android:layout_height="wrap_content"
 
     android:layout_marginHorizontal="10dp"
-    android:layout_marginVertical="5dp">
+    android:layout_marginVertical="5dp"
+    android:background="@color/white">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/card_lot_item"
@@ -76,7 +77,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginBottom="1dp"
 
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/green"
             android:gravity="center"
             android:text="@string/deleteDialogDeleteButton"
             android:textColor="@color/black"
@@ -94,7 +95,7 @@
             android:layout_marginHorizontal="15dp"
 
             android:layout_marginTop="16dp"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/green"
             android:gravity="center"
             android:text="@string/deleteDialogCancel"
 
