--- a/app/src/main/res/layout/layout_item_reservation.xml
+++ b/app/src/main/res/layout/layout_item_reservation.xml
@@ -9,7 +9,7 @@
     android:layout_height="100dp"
 
     app:cardCornerRadius="20dp"
-    app:cardBackgroundColor="@color/blue"
+    app:cardBackgroundColor="@color/grey"
     app:cardElevation="15dp"
     android:layout_marginHorizontal="17.5dp"
     android:layout_marginVertical="5dp"
@@ -32,6 +32,7 @@
             android:text="@string/month_and_year"
             android:textSize="12dp"
             android:textStyle="bold"
+            android:textColor="@color/white"
 
             app:layout_constraintTop_toTopOf="@+id/card_lot_item"
             app:layout_constraintStart_toStartOf="@+id/card_lot_item"
@@ -47,6 +48,7 @@
             android:text="@string/day"
             android:textSize="12dp"
             android:textStyle="bold"
+            android:textColor="@color/white"
 
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/start_month_and_year"
@@ -60,6 +62,7 @@
             android:paddingStart="15dp"
             android:text="@string/hour_of_day"
             android:textSize="10dp"
+            android:textColor="@color/white"
 
             android:textStyle="normal"
 
@@ -78,6 +81,7 @@
             android:text="@string/month_and_year"
             android:textSize="12dp"
             android:textStyle="bold"
+            android:textColor="@color/white"
 
             app:layout_constraintTop_toTopOf="@+id/card_lot_item"
             app:layout_constraintEnd_toEndOf="@+id/card_lot_item"
@@ -93,6 +97,7 @@
             android:text="Miercoles 21"
             android:textSize="12dp"
             android:textStyle="bold"
+            android:textColor="@color/white"
 
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/start_month_and_year"
@@ -107,6 +112,7 @@
 
             android:text="8:00 AM"
             android:textSize="10dp"
+            android:textColor="@color/white"
 
             android:textStyle="normal"
 
@@ -121,7 +127,7 @@
 
             android:layout_marginHorizontal="15dp"
             android:layout_marginBottom="10dp"
-            android:backgroundTint="@color/blue"
+            android:backgroundTint="@color/green"
 
             android:text="Delete"
             android:gravity="center"
