--- a/app/src/main/res/layout/layout_lot_item.xml
+++ b/app/src/main/res/layout/layout_lot_item.xml
@@ -30,7 +30,7 @@
         android:layout_height="40dp"
         android:gravity="center"
         android:text="1"
-        android:textColor="@color/white"
+        android:textColor="@color/grey"
         android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="@+id/ellipse_1"
         app:layout_constraintEnd_toEndOf="@id/ellipse_1"
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:text=""
-        android:textColor="@color/sweet_black"
+        android:textColor="@color/green"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/ellipse_1"
         app:layout_constraintStart_toEndOf="@+id/ellipse_1"
@@ -60,6 +60,7 @@
         android:text="@string/day"
         android:textSize="14dp"
         android:textStyle="bold"
+        android:textColor="@color/white"
         app:layout_constraintStart_toEndOf="@id/ellipse_1"
         app:layout_constraintTop_toTopOf="@id/ellipse_1"
         />
@@ -72,6 +73,7 @@
         android:text="@string/month_and_year"
         android:textSize="14dp"
         android:textStyle="bold"
+        android:textColor="@color/white"
         app:layout_constraintStart_toEndOf="@id/day"
         app:layout_constraintTop_toTopOf="@id/ellipse_1"
         />
@@ -84,6 +86,7 @@
         android:paddingHorizontal="10dp"
         android:text="@string/hour_of_day"
         android:textSize="14dp"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@id/ellipse_1"
         app:layout_constraintStart_toEndOf="@id/ellipse_1"
         />-->
