--- a/app/src/main/res/layout/layout_parking_lots.xml
+++ b/app/src/main/res/layout/layout_parking_lots.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/blue"
+        android:background="@color/green"
     >
 
         <TextView
@@ -98,6 +98,8 @@
         android:layout_height="0dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/busyPlaces" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -111,7 +113,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:maxImageSize="70dp"
-        android:backgroundTint="@color/blue"
+        android:backgroundTint="@color/green"
         app:srcCompat="@android:drawable/ic_menu_add"
         />
 
