--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="sweet_black">#6B000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#FF4962EA</color>
-    <color name="grey">#FF636363</color>
+    <color name="grey">#39393A</color>
     <color name="sweet_grey">#6BEFEFEF</color>
+    <color name="green">#FF1CD89D</color>
 </resources>
