first aproximation to cloud comunication

--- a/app/src/main/res/layout/layout_add_reservation.xml
+++ b/app/src/main/res/layout/layout_add_reservation.xml
@@ -97,6 +97,10 @@
         android:background="@drawable/spinner_background"
         android:clickable="false"
 
+        android:focusableInTouchMode="true"
+        android:inputType="text"
+        android:singleLine="true"
+
         android:focusable="false"
         android:hapticFeedbackEnabled="false"
         android:hint="@string/startDateTimeEditText"
