--- a/app/src/main/res/layout/layout_add_reservation.xml
+++ b/app/src/main/res/layout/layout_add_reservation.xml
@@ -65,9 +65,9 @@
         android:layout_marginHorizontal="15dp"
         android:layout_marginTop="48dp"
         android:background="@drawable/spinner_background"
-        android:contentDescription="@string/spinner_content"
-        android:spinnerMode="dropdown"
-        android:textSize="20sp"
+        android:spinnerMode="dialog"
+        android:textColor="@color/white"
+        android:textSize="25dp"
         app:barrierMargin="10dp"
         app:flow_maxElementsWrap="6"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,6 +104,7 @@
         android:focusable="false"
         android:hapticFeedbackEnabled="false"
         android:hint="@string/startDateTimeEditText"
+        android:textColorHint="@color/white"
         android:paddingHorizontal="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.551"
@@ -133,6 +134,7 @@
         android:clickable="false"
         android:focusable="false"
         android:hint="@string/endDateTimeEditText"
+        android:textColorHint="@color/white"
         android:paddingHorizontal="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.517"
@@ -160,6 +162,7 @@
         android:layout_marginTop="28dp"
         android:background="@drawable/spinner_background"
         android:hint="@string/authorizationEditText"
+        android:textColorHint="@color/white"
         android:inputType="text"
         android:paddingHorizontal="20dp"
         app:layout_constraintEnd_toEndOf="parent"
