--- a/app/src/main/res/layout/layout_drop_down_item.xml
+++ b/app/src/main/res/layout/layout_drop_down_item.xml
@@ -5,6 +5,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/pickALot"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         android:textAppearance="?attr/textAppearanceSubtitle1"
         android:padding="16dp"
     />
